# groupe03-E-commerce

./: .gitignore  README.md  analyse.py  dashboard.py  main.py  pyproject.toml
datasets/processed/: ecommerce_clean.csv
datasets/raw/: .~lock.ecommerce_sales_analytics_5000.csv#
src/: chargement.py  nettoyage.py  visualisation.py
